@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <!--
 
-    Copyright (C) 2012 Red Hat, Inc.
+Copyright (C) 2012 Red Hat, Inc.
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
 
-            http://www.apache.org/licenses/LICENSE-2.0
+http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -30,7 +30,27 @@
   <name>POM Manipulation Extension for Maven Annotation Processor</name>
   <description>Contains config annotation and processor</description>
 
+  <properties>
+    <pkg.root.dot>org.commonjava.maven.ext.annotation</pkg.root.dot>
+  </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.enterprise</groupId>
+      <artifactId>cdi-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vavr</groupId>
+      <artifactId>vavr</artifactId>
+    </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
@@ -43,9 +63,13 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
-     <dependency>
+    <dependency>
       <groupId>com.github.olivergondza</groupId>
       <artifactId>maven-jdk-tools-wrapper</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.auto.service</groupId>
+      <artifactId>auto-service</artifactId>
     </dependency>
   </dependencies>
 
@@ -54,29 +78,98 @@
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <executions>
-          <execution>
-            <id>default-jar</id>
-            <goals>
+          <!--execution>
+              <id>default-jar</id>
+              <goals>
               <goal>jar</goal>
-            </goals>
-            <configuration>
+              </goals>
+              <configuration>
               <excludes>
-                <exclude>**/ConfigValueProcessor*</exclude>
-                <exclude>**/javax.annotation.processing.Processor</exclude>
+              <exclude>**/ConfigValueProcessor*</exclude>
+              <exclude>META-INF/services/javax.annotation.processing.Processor</exclude>
               </excludes>
-            </configuration>
-          </execution>
+              </configuration>
+              </execution-->
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
           <execution>
-            <id>processor</id>
+            <phase>package</phase>
             <goals>
-              <goal>jar</goal>
+              <goal>shade</goal>
             </goals>
             <configuration>
-              <classifier>processor</classifier>
-              <includes>
-                <include>**/ConfigValueProcessor*</include>
-                <include>**/javax.annotation.processing.Processor</include>
-              </includes>
+              <!--artifactSet>
+                  <excludes>
+                  <exclude>${project.groupId}:${project.artifactId}:jar:</exclude>
+                  </excludes>
+                  </artifactSet-->
+              <entryPoints>
+                <entryPoint>${pkg.root.dot}.ConfigValueProcessor</entryPoint>
+                <entryPoint>${pkg.root.dot}.ApplicationScopedProcessor</entryPoint>
+              </entryPoints>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <shadedClassifierName>processor</shadedClassifierName>
+              <createSourcesJar>true</createSourcesJar>
+              <shadeSourcesContent>true</shadeSourcesContent>
+              <useDependencyReducedPomInJar>true</useDependencyReducedPomInJar>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/maven/extension.xml</exclude>
+                  </excludes>
+                </filter>
+                <filter>
+                  <artifact>com.*:*</artifact>
+                  <excludes>
+                    <exclude>**/module-info.class</exclude>
+                    <exclude>**/*.html</exclude>
+                    <exclude>META-INF/**</exclude>
+                  </excludes>
+                </filter>
+                <filter>
+                  <artifact>io.*:*</artifact>
+                  <excludes>
+                    <exclude>**/module-info.class</exclude>
+                    <exclude>**/*.html</exclude>
+                    <exclude>META-INF/**</exclude>
+                  </excludes>
+                </filter>
+                <filter>
+                  <artifact>org.*:*</artifact>
+                  <excludes>
+                    <exclude>**/module-info.class</exclude>
+                    <exclude>**/*.html</exclude>
+                    <!--exclude>META-INF/**</exclude-->
+                  </excludes>
+                </filter>
+              </filters>
+              <minimizeJar>true</minimizeJar>
+              <relocations>
+                <relocation>
+                  <pattern>org.commonjava</pattern>
+                  <shadedPattern>org.commonjava</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>com</pattern>
+                  <shadedPattern>${pkg.root.dot}.SHADED.com</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>io</pattern>
+                  <shadedPattern>${pkg.root.dot}.SHADED.io</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org</pattern>
+                  <shadedPattern>${pkg.root.dot}.SHADED.org</shadedPattern>
+                </relocation>
+              </relocations>
+              <transformers>
+                <!--transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" /-->
+              </transformers>
             </configuration>
           </execution>
         </executions>
@@ -85,7 +178,17 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <compilerArgument>-proc:none</compilerArgument>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>com.google.auto.service</groupId>
+              <artifactId>auto-service</artifactId>
+              <version>${autoserviceVersion}</version>
+	      <classifier/>
+            </path>
+          </annotationProcessorPaths>
+          <!--compilerArgs>
+            <arg>-proc:full</arg>
+          </compilerArgs-->
         </configuration>
       </plugin>
       <plugin>
@@ -94,10 +197,10 @@
         <executions>
           <execution>
             <id>attach-javadocs</id>
-              <!-- Standard configuration uses a custom doclet so revert all config to standard -->
-              <configuration combine.self="override">
-               <source>8</source>
-               <quiet>true</quiet>
+            <!-- Standard configuration uses a custom doclet so revert all config to standard -->
+            <configuration combine.self="override">
+              <source>${javaVersion}</source>
+              <quiet>true</quiet>
             </configuration>
           </execution>
         </executions>
